# SeriousOrganizerLib

./: .gitignore  Cargo.toml  LICENSE  test.sqlite3
migrations/2018-07-05-173706_create_locations/: up.sql
migrations/2018-08-05-173707_create_entries/: down.sql  up.sql
migrations/2018-08-05-173713_create_files/: up.sql
migrations/2018-08-05-173718_create_labels/: down.sql  up.sql
migrations/2018-08-05-173729_create_entry2labels/: down.sql  up.sql
migrations/2019-06-06-080939_create_locations/: up.sql
migrations/2019-07-14-094946_create_location2entries/: down.sql  up.sql
migrations/2022-02-12-135448_label_auto_filters/: down.sql  up.sql
migrations/2023-01-01-202915_entry_grade/: down.sql  up.sql
src/: db.rs  dir_search.rs  lens.rs  lib.rs  models.rs  schema.rs  store.rs
