[package]
name = "serious_organizer_lib"
version = "0.1.1"
authors = ["Jesper Axelsson <jesperaxe@gmail.com>"]
edition = "2018"

[dependencies]
scan_dir = "0.3.3"
time = "0.1.41"
regex = "1.1.0"

serde = "1.0.82"
serde_derive = "1.0.82"

#walkdir = "2.2.6"

diesel = { version = "1.3.3", default-features = false, features = ["sqlite"] }
#diesel_codegen = { version = "0.16", features = ["sqlite"] }
#diesel_codegen = { version = "*", default-features = false, features = ["sqlite", "nightly"] }
#dotenv = "0.13.0"

num-traits = "0.2.6"
num-derive = "0.2.3"


# log = { version = "0.4.1", features = ["release_max_level_warn"] }

#[dependencies.rusqlite]
#version = "0.13.0"
#features = ["bundled"]
