[package]
name = "serious_organizer_lib"
version = "0.2.0"
authors = ["Jesper Axelsson <jesperaxe@gmail.com>"]
edition = "2018"

[dependencies]
scan_dir = "0.3.3"
time = "0.2.22"
regex = "1.4.1"

serde = "1.0.117"
serde_derive = "1.0.117"

#walkdir = "2.2.6"

diesel = { version = "1.4.5", default-features = false, features = ["sqlite"] }
diesel_migrations = "1.4.0"

#diesel_codegen = { version = "0.16", features = ["sqlite"] }
#diesel_codegen = { version = "*", default-features = false, features = ["sqlite", "nightly"] }
#dotenv = "0.13.0"

num-traits = "0.2.12"
num-derive = "0.3.2"
diesel-derive-newtype = "0.1.2"

log = "0.4.11"


# log = { version = "0.4.1", features = ["release_max_level_warn"] }

#[dependencies.rusqlite]
#version = "0.13.0"
#features = ["bundled"]
