[package]
name = "serious_organizer_lib"
version = "0.3.0"
authors = ["Jesper Axelsson <jesperaxe@gmail.com>"]
edition = "2021"

[dependencies]
scan_dir = "0.3.3"
time = "0.3"
regex = "1.5"

diesel = { version = "1.4.5", default-features = false, features = ["sqlite"] }
diesel_migrations = "1.4.0"

log = "0.4"
anyhow="1"
